chore: cleanup for better separation of concerns